app router, router outlet

--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <h3>Sistema de controle de produtos</h3>
 
 <ul>
-    <li><a href="">Cadastrar produtos</a></li>
-    <li><a href="">Consultar produtos</a></li>
-    <li><a href="">Atualizar produtos</a></li>
+    <li><a routerLink="/pages/cadastro-produtos">Cadastrar produtos</a></li>
+    <li><a routerLink="/pages/consulta-produtos">Consultar produtos</a></li>
+    <li><a routerLink="/pages/edicao-produtos">Atualizar produtos</a></li>
 </ul>
 
 <hr/>
