--- a/src/app/components/pages/cadastro-produtos/cadastro-produtos.component.html
+++ b/src/app/components/pages/cadastro-produtos/cadastro-produtos.component.html
@@ -22,8 +22,7 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="quantidade" class="form-label">
-                                Quantidade</label>
+                            <label for="quantidade" class="form-label">Quantidade</label>
                             <input type="number" class="form-control" id="quantidade"
                                 placeholder="Digite a quantidade do produto" required>
                         </div>
@@ -32,10 +31,10 @@
                             <label for="categoria" class="form-label">Categoria</label>
                             <select class="form-select" id="categoria" required>
                                 <option value="" disabled selected>Selecione a categoria</option>
-                                <option value="eletronicos">Eletrônicos</option>
-                                <option value="moveis">Móveis</option>
-                                <option value="roupas">Roupas</option>
-                                <option value="alimentos">Alimentos</option>
+                                
+                                <option *ngFor="let c of categorias">
+                                    {{ c.nome }}
+                                </option>
                             </select>
                         </div>
 
