--- a/src/app/components/pages/consulta-produtos/consulta-produtos.component.html
+++ b/src/app/components/pages/consulta-produtos/consulta-produtos.component.html
@@ -29,16 +29,18 @@
                                 <th scope="col">Nome</th>
                                 <th scope="col">Preço</th>
                                 <th scope="col">Quantidade</th>
+                                <th scope="col">Total</th>
                                 <th scope="col">Categoria</th>
                                 <th scope="col" class="text-center">Ações</th>
                             </tr>
                         </thead>
                         <tbody>
                            <tr *ngFor="let p of produtos">
-                                <td>{{ p.nome }}</td>
+                                <td><strong>{{ p.nome }}</strong></td>
                                 <td>{{ p.preco }}</td>
                                 <td>{{ p.quantidade }}</td>
-                                <td></td>
+                                <td>{{ p.preco * p.quantidade | currency: 'BRL' }}</td>
+                                <td>{{ p.categoria.nome | uppercase }}</td>
                                 <td class="text-center">
                                     <button class="btn btn-warning btn-sm me-1">Atualizar</button>
                                     <button class="btn btn-danger btn-sm">Excluir</button>
