--- a/src/app/components/pages/consulta-produtos/consulta-produtos.component.html
+++ b/src/app/components/pages/consulta-produtos/consulta-produtos.component.html
@@ -19,10 +19,14 @@
                         <button type="submit" class="btn btn-primary w-100">Pesquisar</button>
                     </form>
                 </div>
-            </div>
 
-            <div class="card mt-4 shadow-lg">
+            <div *ngIf="produtos.length > 0" class="card mt-4 shadow-lg">
                 <div class="card-body">
+
+                    <div *ngIf="mensagem" class="alert alert-success mb-2">
+                        <strong>Sucesso!</strong> {{ mensagem }}
+                    </div>
+
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -43,7 +47,7 @@
                                 <td>{{ p.categoria.nome | uppercase }}</td>
                                 <td class="text-center">
                                     <button class="btn btn-warning btn-sm me-1">Atualizar</button>
-                                    <button class="btn btn-danger btn-sm">Excluir</button>
+                                    <button (click)="onDelete(p.id)" class="btn btn-danger btn-sm">Excluir</button>
                                 </td>
                            </tr>
                         </tbody>
