--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -15,9 +15,9 @@
                     aria-expanded="false">Gerenciar produtos</a>
 
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" routerLink="/pages/dashboard">Dashboard Produtos/Categorias</a></li>
                     <li><a class="dropdown-item" routerLink="/pages/cadastro-produtos">Cadastrar produtos</a></li>
                     <li><a class="dropdown-item" routerLink="/pages/consulta-produtos">Consultar produtos</a></li>
-                    <li><a class="dropdown-item" routerLink="/pages/edicao-produtos">Atualizar produtos</a></li>
                 </ul>
             </li>
         </ul>
