--- a/src/app/components/pages/consulta-produtos/consulta-produtos.component.html
+++ b/src/app/components/pages/consulta-produtos/consulta-produtos.component.html
@@ -46,7 +46,7 @@
                                 <td>{{ p.preco * p.quantidade | currency: 'BRL' }}</td>
                                 <td>{{ p.categoria.nome | uppercase }}</td>
                                 <td class="text-center">
-                                    <button class="btn btn-warning btn-sm me-1">Atualizar</button>
+                                    <button [routerLink]="['/pages/edicao-produtos', p.id]" class="btn btn-warning btn-sm me-1">Atualizar</button>
                                     <button (click)="onDelete(p.id)" class="btn btn-danger btn-sm">Excluir</button>
                                 </td>
                            </tr>
