--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -9,6 +9,15 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" routerLink="/pages/autenticar-usuario">Autenticar usuário</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" routerLink="/pages/criar-usuario">Criar usuário</a>
+            </li>
+
             <li class="nav-item dropdown">
 
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
