--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -8,27 +8,41 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
+
         <ul class="navbar-nav">
 
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="!isAuthenticated">
                 <a class="nav-link active" aria-current="page" routerLink="/pages/autenticar-usuario">Autenticar usuário</a>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="!isAuthenticated">
                 <a class="nav-link active" aria-current="page" routerLink="/pages/criar-usuario">Criar usuário</a>
             </li>
 
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown" *ngIf="isAuthenticated">
 
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">Gerenciar produtos</a>
 
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" routerLink="/pages/dashboard">Dashboard Produtos/Categorias</a></li>
+                    <li><a class="dropdown-item" routerLink="/pages/dashboard">Dashboard Produtos / Categorias</a></li>
                     <li><a class="dropdown-item" routerLink="/pages/cadastro-produtos">Cadastrar produtos</a></li>
                     <li><a class="dropdown-item" routerLink="/pages/consulta-produtos">Consultar produtos</a></li>
                 </ul>
             </li>
         </ul>
+
+        <div class="d-flex align-items-center text-white ms-auto" *ngIf="isAuthenticated">
+            <div class="me-3">
+                <div>
+                    <span class="fw-bold"> {{ nome }}</span> &nbsp; <span class="badge bg-secondary"> {{ perfil}}</span>
+                </div>
+                <div>
+                    <small>{{ email }}</small>
+                </div>
+            </div>
+            <button class="btn btn-outline-light me-4" (click)="logout()">Sair</button>
+        </div>
+
     </div>
 </nav>
